--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -62,33 +62,12 @@
     />
   </head>
   <body>
-    <div class="fixed inset-0 bg-[radial-gradient(ellipse_at_top_left,_#1d1e3a_0%,_#050217_40%,_#050217_60%,_#1d1e3a_100%)] z-0">
-    </div>
-    <div
-      class="fixed inset-x-0 -top-[69%] z-0 flex transform justify-center overflow-hidden blur-3xl"
-      aria-hidden="true"
-    >
-      <div
-        class="w-screen h-[150vh] flex-none bg-gradient-to-b from-gray-900 to-gray-950 opacity-75 transition-opacity"
-        style="clip-path: polygon(70.71% 100%, 100% 70.71%, 100% 0%, 70.71% 0%, 29.29% 0%, 0% 0%, 0% 70.71%, 29.29% 100%)"
-      >
-      </div>
-    </div>
-    <div
-      class="fixed inset-x-0 -top-[5%] z-0 flex transform justify-center overflow-hidden blur-3xl"
-      aria-hidden="true"
-    >
-      <div
-        class="w-screen h-[100vh] flex-none bg-gradient-to-r from-purple-900 to-violet-950 opacity-10 transition-opacity"
-        style="clip-path: polygon(5.5% 13%, 52.75% 0%, 100% 13%, 100% 100%, 0% 100%)"
-      >
-      </div>
-    </div>
-    <div class="relative mt-[64px]">
+    
+    <div class="relative mt-[64px] bg-black">
       <div
         id="navbar"
         phx-hook="NavBar"
-        class="fixed z-30 top-0 w-full transition-colors flex gap-4 items-center justify-between h-[56px] px-4"
+        class="fixed z-30 top-0 w-full bg-black transition-colors flex gap-4 items-center justify-between h-[56px] px-4"
       >
         <div class="sm:w-1/3 flex items-center gap-4">
           <button
