--- a/lib/algora_web/components/layouts/root_embed.html.heex
+++ b/lib/algora_web/components/layouts/root_embed.html.heex
@@ -53,7 +53,7 @@
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
-    <script defer data-domain="tv.algora.io" src="https://plausible.io/js/script.js">
+    <script defer data-domain="staging.algora.tv" src="https://plausible.io/js/script.js">
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
