add new topbar on homepage

--- a/lib/algora_web/components/layouts/live.html.heex
+++ b/lib/algora_web/components/layouts/live.html.heex
@@ -41,7 +41,7 @@
     </div>
 
     <div class="flex-shrink-0 flex items-center px-4">
-      <.logo />
+      <.logo class="w-16 h-auto hidden sm:flex" />
     </div>
 
     <div class="mt-4 flex-1 h-0 overflow-y-auto">
