remove 'noreferrer' from external link rel attributes

--- a/lib/algora_web/components/layouts/live.html.heex
+++ b/lib/algora_web/components/layouts/live.html.heex
@@ -158,7 +158,7 @@
         <a
           class="group outline-none w-full"
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener"
           href="https://github.com/algora-io/tv/issues"
         >
           <div class="flex text-center font-sans justify-center items-center shrink-0 duration-150 select-none group-focus:outline-none group-disabled:opacity-75 group-disabled:pointer-events-none p-2 w-full gap-2 rounded-sm bg-transparent group-hover:bg-gray-800 buttonSize iconSize fontSize text-gray-400 group-hover:text-gray-300 px-3 -ml-1 border-b border-gray-800 transition hover:bg-gray-800">
@@ -209,7 +209,7 @@
         <a
           class="group outline-none w-full"
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener"
           href="https://github.com/algora-io/tv"
         >
           <div class="flex text-center font-sans justify-center items-center shrink-0 duration-150 select-none group-focus:outline-none group-disabled:opacity-75 group-disabled:pointer-events-none p-2 w-full gap-2 rounded-sm bg-transparent group-hover:bg-gray-800 buttonSize iconSize fontSize text-gray-400 group-hover:text-gray-300 px-3 -ml-1 border-b border-gray-800 transition hover:bg-gray-800">
