--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -86,7 +86,7 @@
           <a
             class="group outline-none w-fit"
             target="_blank"
-            rel="noopener noreferrer"
+            rel="noopener"
             href="https://www.youtube.com/@algora-io"
           >
             <div class="text-center font-sans justify-center items-center shrink-0 transition duration-150 select-none group-focus:outline-none group-disabled:opacity-75 group-disabled:pointer-events-none bg-transparent hover:bg-slate-850 disabled:opacity-50 h-8 px-2 text-sm font-semibold rounded-[3px] hidden whitespace-nowrap lg:flex">
@@ -127,7 +127,7 @@
             :if={Algora.Stargazer.count()}
             class="group outline-none w-fit"
             target="_blank"
-            rel="noopener noreferrer"
+            rel="noopener"
             href="https://github.com/algora-io/tv"
           >
             <div class="text-center font-sans justify-center items-center shrink-0 transition duration-150 select-none group-focus:outline-none group-disabled:opacity-75 group-disabled:pointer-events-none bg-transparent hover:bg-slate-850 disabled:opacity-50 h-8 text-sm font-semibold rounded-[3px] hidden whitespace-nowrap p-2 lg:flex">
