--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -5,7 +5,7 @@
       <a
         href={@ad.website_url |> String.replace(~r/[?#].*$/, "")}
         target="_blank"
-        rel="noopener noreferrer"
+        rel="noopener"
         class="truncate max-w-[300px]"
       >
         <span>
