rename component & hook

--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -16,7 +16,7 @@
         </span>
       </a>
     </div>
-    <.ad_banner ad={@ad} id={"ad-banner-#{@ad.id}"} />
+    <.live_billboard ad={@ad} id={"ad-banner-#{@ad.id}"} />
     <div class="shrink-0 hidden sm:flex items-center gap-4">
       <div class="flex items-center gap-2">
         <button
