--- a/lib/algora_web/live/ad_live/index.html.heex
+++ b/lib/algora_web/live/ad_live/index.html.heex
@@ -36,7 +36,7 @@
         </div>
       </div>
     </a>
-    <.ad_banner ad={ad} id={"ad-banner-#{ad.id}"} />
+    <.live_billboard ad={ad} id={"ad-banner-#{ad.id}"} />
   </:col>
   <:action :let={{_id, ad}}>
     <div class="sr-only">
