--- a/lib/algora_web/live/ad_live/schedule.html.heex
+++ b/lib/algora_web/live/ad_live/schedule.html.heex
@@ -31,6 +31,6 @@
         </div>
       </div>
     </a>
-    <.ad_banner ad={ad} id={"ad-banner-#{ad.id}"} />
+    <.live_billboard ad={ad} id={"ad-banner-#{ad.id}"} />
   </:col>
 </.table>
