--- a/lib/algora_web/live/ad_live/schedule.html.heex
+++ b/lib/algora_web/live/ad_live/schedule.html.heex
@@ -31,11 +31,6 @@
         </div>
       </div>
     </a>
-    <img
-      src={ad.composite_asset_url}
-      alt={ad.website_url}
-      class="box-content w-[1092px] h-[135px] object-cover border-[4px] rounded-xl transition-opacity duration-1000"
-      style={"border-color: #{ad.border_color || "#fff"}"}
-    />
+    <.live_billboard ad={ad} id={"ad-banner-#{ad.id}"} />
   </:col>
 </.table>
