--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -169,7 +169,7 @@
       </div>
     </div>
 
-    <div :if={@blurb.video} class="flex flex-col sm:flex-row items-center justify-between gap-4">
+    <div :if={@blurb} class="flex flex-col sm:flex-row items-center justify-between gap-4">
       <div class="w-full cursor-pointer">
         <.live_component module={PlayerComponent} id="analytics-player" />
       </div>
